--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 	<nav class="navbar">
 		<div class="container">
-			<a href="#" class="logo">Étoile</a>
+			<a href="#" class="logo">Étoile.</a>
 			<ul class="menu">
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About</a></li>
@@ -21,13 +21,79 @@
 	</nav>
 
     <div class="banner">
-       <div class="teks">
-        <h1>Sepatu</h1>
+       <div class="title">
+        <h1>Étoile</h1>
+		<h2>Fashion That Inspires Your Life</h2>
        </div>
 
        <div class="gambar">
         <img src="assets/images/sepatu.png" alt="">
        </div>
     </div>
+
+	<div class="etalase">
+		<div class="title-etalase">
+			<h2>The products we sell</h2>
+		</div>
+		<div class="product">
+			<div class="name">
+				<div class="title-name1">
+					<img src="assets/images/nike-logo.png" alt="">
+					<h3>Nike</h3>
+					<p>100 Items</p>
+				</div>
+				<div class="title-name2">
+					<img src="assets/images/Converse-Logo.png" alt="">
+					<h3>Converse</h3>
+					<p>100 Items</p>
+				</div>
+				<div class="title-name3">
+					<img src="assets/images/new-balance-logo.png" alt="">
+					<h3>New Balence</h3>
+					<p>100 Items</p>
+				</div>
+				<div class="title-name4">
+					<img src="assets/images/adidas-logo.png" alt="">
+					<h3>Adidas</h3>
+					<p>100 Items</p>
+				</div>
+			</div>
+			<!-- <div class="jdul">
+				<h2>Nike</h2>
+				<h2>Nike</h2>
+				<h2>Nike</h2>
+				<h2>Nike</h2>
+			</div>
+			<div class="paragraph">
+				<p>100 Items</p>
+				<p>100 Items</p>
+				<p>100 Items</p>
+				<p>100 Items</p>
+			</div> -->
+		</div>
+	</div>
+
+	<div class="trending-product">
+		<div class="judul-product">
+			<h2>Trending Product</h2>
+		</div>
+		<div class="product">
+			<div class="product1">
+				<img src="assets/images/Adidas-Samba-OG-Collegiate-Green-4.png" alt="">
+				<p>Adidas samba Collegiate Green</p>
+				<button type="submit" class="button">Add to cart</button>
+			</div>
+			<div class="product1">
+				<img src="assets/images/Adidas-Samba-OG-Collegiate-Green-4.png" alt="">
+				<p>Adidas samba Collegiate Green</p>
+				<button type="submit" class="button">Add to cart</button>
+			</div>
+			<div class="product1">
+				<img src="assets/images/Adidas-Samba-OG-Collegiate-Green-4.png" alt="">
+				<p>Adidas samba Collegiate Green</p>
+				<button type="submit" class="button">Add to cart</button>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
